--- a/css/spa.css
+++ b/css/spa.css
@@ -11,7 +11,7 @@
 	box-sizing: border-box;
 }
 h1,h2,h3,h4,h5,h6,p{
-	margin-bottom: 10px;
+	margin-bottom: 6pt;
 }
 ol,ul,dl{
 	list-style-position: inside;
@@ -20,7 +20,7 @@ ol,ul,dl{
 
 /* 標準セレクタ開始 */
 body{
-	font: 13px 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
+	font: 10pt 'Trebuchet MS', Verdana, Helvetica, Arial, sans-serif;
 	color						:	#444;
 	background-color: #888;
 }
@@ -48,9 +48,9 @@ strong{
 	bottom: 8px;
 	right	: 8px;
 
-	min-height	: 500px;
-	min-width		: 500px;
-	overflow		: hidden;
+	min-height	: 15em;
+	min-width	: 35em;
+	overflow	: hidden;
 
 	background-color: #fff;
 	border-radius		: 0 8px 0 8px;
