--- a/css/spa.shell.css
+++ b/css/spa.shell.css
@@ -17,18 +17,33 @@
 
 .spa-shell-head-logo {
 	top: 4px;
-	left: 4px;
+	left: 8px;
 	height: 32px;
-	width: 128px;
-	background: orange;
+	width: 300px;
+}
+
+.spa-shell-head-logo h1 {
+	font: 800 22px/22px Arial, Helvetica, sans-serif;
+	margin: 0;
+}
+
+.spa-shell-head-logo p {
+	font: 800 10px/10px Arial, Helvetica, sans-serif;
+	margin: 0;
 }
 
 .spa-shell-head-acct {
 	top: 4px;
 	right: 0;
-	width: 64px;
+	width: 210px;
 	height: 32 px;
-	background: green;
+	line-height: 32px;
+	background: #888;
+	color: #fff;
+	text-align : center;
+	cursor: pointer;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .spa-shell-head-search {
@@ -52,8 +67,9 @@
 }
 
 .spa-shell-main-nav {
-	width: 250px;
+	width: 400px;
 	background: #eee;
+	z-index:1;
 }
 
 .spa-x-closed .spa-shell-main-nav {
@@ -61,7 +77,7 @@
 }
 
 .spa-shell-main-content {
-	left: 250px;
+	left: 400px;
 	right: 0;
 	background: #ddd;
 }
@@ -76,22 +92,6 @@
 	right: 0;
 	height: 40px;
 }
-
-/* spa.chat.cssへ移動
-.spa-shell-chat {
-	bottom: 0;
-	right: 0;
-	width: 300px;
-	height: 15px;
-	cursor: pointer;
-	background: red;
-	border-radius: 5px 0 0 0;
-	z-index: 1;
-}
-
-.spa-shell-chat:hover{
-	background: #a00;
-} */
 
 .spa-shell-modal {
 	margin-top: -200px;
